--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-07 04:43:47
+lastsearch = 2024-08-07 05:52:21
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -3.6%%
-title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
-url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
+match = 3.6%%
+title = Chiếu nhựa Việt Nam 1M6 X 2M - RẺ NHẤT - CN1M6
+url = https://www.sendo.vn/chieu-nhua-viet-nam-1m6-x-2m-re-nha-t-48369986.html
 
 [mia.vn]
 match = -7.1%%
