--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-06 22:00:49
+lastsearch = 2024-08-07 06:00:01
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -54.2%%
-title = 🔴TRỰC TIẾP 🔴THỜI SỰ 19H VTV1 - 20/3/2024 | ĐÀI ...
-url = https://www.youtube.com/watch?v=Pa-TmxiqHBk
+match = -75.0%%
+title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
+url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -215,4 +215,14 @@ url = https://baochinhphu.vn/manh-tay-xu-ly-kinh-doanh-da-cap-bien-tuong-lua-dao
 match = -8.3%%
 title = Dawaco – Vì cuộc sống chất lượng hơn
 url = https://dawaco.com.vn/
+
+[www.mpi.gov.vn]
+match = -37.5%%
+title = Cổng thông tin điện tử Bộ Kế hoạch và Đầu tư
+url = https://www.mpi.gov.vn/
+
+[m.facebook.com]
+match = -5.0%%
+title = Techcombank Việt Nam
+url = https://m.facebook.com/story.php/?story_fbid=916908393815661&id=100064895251803
 
