--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-07 03:28:28
+lastsearch = 2024-08-07 05:53:45
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -171.4%%
+title = Bảng giá bộ chăn ga gối trẻ em Everon Trains họa tiết in đoàn ...
+url = https://everonvn.com.vn/everon/534/bo-tre-em-trains
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
+match = -66.7%%
+title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
