--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-07 00:49:55
+lastsearch = 2024-08-07 05:55:50
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo Dunlopillo
-url = https://demtot.com/dem-lo-xo-dunlopillo/
+match = 26.7%%
+title = Đệm lò xo Korea
+url = https://demtot.com/dem-lo-xo-lien-ket-korea/
 
 [tuananh.vn]
 match = 52.4%%
