--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-07 05:00:08
+lastsearch = 2024-08-07 05:51:19
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -115.0%%
 title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_sobIRQ3hr&sig=ACfU3U0fLGi4Y7G_-G_CurxTFkbUejA3MA&hl=en&sa=X&ved=2ahUKEwik0v2R5s-HAxUCPUQIHWQyJFkQ6AF6BAhBEAM
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_sobOSM9no&sig=ACfU3U1V_isQdLIEYdSq7nanzU6dsvP93w&hl=en&sa=X&ved=2ahUKEwjy0amOuuGHAxX7FVkFHbs9G_oQ6AF6BAhAEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -105.0%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -90.0%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.vlr.gg]
 match = -145.0%%
