--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-07 05:45:00
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html?srsltid=AfmBOoqW4nxougsjdjEfKpXDWxjQegnjAGuaGfqGyQGAlqryFLP2lSKO
 
 [shopee.vn]
 match = -105.0%%
@@ -24,7 +24,7 @@ url = https://noithatami.com/giuong-ngu-boc-dem-1m8/
 [ninhouse.vn]
 match = -45.0%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap
+url = https://ninhouse.vn/collections/drap?srsltid=AfmBOopXQM2r5WNFywMM0Qh3dyi7B9Sm5a80cvW59L4lvueX9beurESB
 
 [giuongxep.com]
 match = -70.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOoq9Eik_ACsRW6sxcTiRYDCTFdrI7c2y4LpW9ThfQTqG-zqOEV6w
 
 [sofaphongkhach.vn]
 match = -40.0%%
@@ -169,7 +169,7 @@ url = https://dogohiephien.vn/giuong-go-dep/
 [noithatcaco.vn]
 match = -110.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoolwzJsSptiMqhz3ZlCsRJeMQcgqi5D18anuQIZB7zUV_9LT8kx
 
 [noithatminhtan.com]
 match = 5.0%%
@@ -270,4 +270,9 @@ url = https://www.youtube.com/watch?v=fYeBx-h3xj4
 match = 0.0%%
 title = Đệm bông Everon 1m, 1m2, 1m4
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+
+[www.mdfuni.com]
+match = -40.0%%
+title = Combo giường tủ hiện đại nhập khẩu MDC-14
+url = https://www.mdfuni.com/san-pham/combo-giuong-tu-hien-dai-nhap-khau-mdc-14/
 
