--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-07 04:28:04
+lastsearch = 2024-08-07 05:48:31
 
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopW_NfRv__5n3TF7tkICUO_vIMprq200o2VmE6EYQDEYePU9GES
 
 [demkhangduy.com]
 match = -25.0%%
@@ -19,7 +19,7 @@ url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 [demxanh.com]
 match = -100.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html?srsltid=AfmBOoqwhU1gdL9A8x91KnqXMEW9RwWXC4GxTG_7LeDjH1-LdjvrI20u
 
 [tuananh.vn]
 match = 10.0%%
@@ -27,14 +27,14 @@ title = LÒ XO TÚI RUBY POTENCY
 url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
-match = -25.0%%
-title = Đệm Lò Xo Túi Adaptive Tuấn Anh
-url = https://dem24h.vn/dem-lo-xo-tui-adaptive-tuan-anh
+match = -35.0%%
+title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
+url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 
 [demviethome.vn]
-match = -135.0%%
-title = Đệm lò xo Tuấn Anh Adaptive Pocket Cuộn giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive-pocket-cuon/
+match = -140.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/?srsltid=AfmBOoo9sr-5bn81ZT2fevQgTssP9ngGCn4VIPtWVb4-JfVaQomIFiC-
 
 [bedding.vn]
 match = -25.0%%
