--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-07 01:25:28
+lastsearch = 2024-08-07 05:58:39
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -206.2%%
+title = Huda beauty lipstick shade ‘buttercup’ thank me later ...
+url = https://www.tiktok.com/@megxfenwick/video/7321757021164932384
 
 [digitalmaine.com]
 match = -75.0%%
