--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-07 03:41:28
+lastsearch = 2024-08-07 07:59:26
 
 [www.diepxuan.com]
 match = -20.0%%
-title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+title = Chiếu cây HT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -53.3%%
-title = Đèn Led thủy sinh T8 0.9m HT 14W
-url = https://www.thietbidiendgp.vn/products/den-led-thuy-sinh-t8-ht-14w
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
