--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-07 06:44:39
+lastsearch = 2024-08-07 08:03:59
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,8 +12,8 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
+match = -66.7%%
+title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -142.9%%
-title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
-url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
+match = -123.8%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
 match = -176.2%%
