--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-06 18:49:21
+lastsearch = 2024-08-07 08:09:50
 
 [www.youtube.com]
 match = -420.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -390.0%%
-title = Ren - Coming up to 14 years of living with a chronic...
-url = https://www.facebook.com/renmakesmusic/posts/coming-up-to-14-years-of-living-with-a-chronic-illnessi-always-said-if-i-ever-ha/913039023526946/
+match = -450.0%%
+title = Tallest Teenager - Guinness World Records Day | New record ...
+url = https://www.facebook.com/GuinnessWorldRecords/videos/tallest-teenager-guinness-world-records-day/657433078277882/
 
 [books.google.com]
 match = -460.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
-url = https://cutiesai.itch.io/14dayswithyou
+match = 0.0%%
+title = 
+url = https://cutiesai.itch.io/14dayswithyou/purchase
 
 [www.koha.net]
 match = 0.0%%
