--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-07 08:00:29
+lastsearch = 2024-08-07 12:17:39
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOorWRfQuoMcDasXQgEboZKklwQCyJiNjDNrQP5-5iQwLcnMgublP
 
 [everon.online]
 match = -5.0%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 20.0%%
-title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
-url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
+match = 29.7%%
+title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
+url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/?srsltid=AfmBOoo5iYWbywU30RQgyUHvbqVey-E04feN6oTGDFgF8UHq_HZSrF5v
 
 [everonhanquoc.vn]
 match = 22.6%%
