--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-07 10:15:54
+lastsearch = 2024-08-07 12:24:38
 
 [tiki.vn]
 match = -138.9%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = -33.3%%
-title = Bộ Chăn Ga Gối Modal Cotton MC13
-url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
+match = 33.3%%
+title = Bộ Chăn Ga Gối Eu07
+url = https://antbedding.com/bo-chan-ga-goi-eu07
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = -38.9%%
-title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+match = 27.8%%
+title = Bộ phủ màu 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 0.0%%
