--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-07 05:37:38
+lastsearch = 2024-08-07 12:18:24
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
 url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = 48.4%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
+match = 6.5%%
+title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [tiki.vn]
 match = -19.4%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 9.7%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
+match = 0.0%%
+title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc) ...
+url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
 match = 16.1%%
