--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 09:59:01
+lastsearch = 2024-08-07 12:23:54
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdnold2hR&sig=ACfU3U0gB-LJO9Yp2Ob3UU8fMKilWZ5E1Q&hl=en&sa=X&ved=2ahUKEwiz04S98eGHAxVZmokEHXSLN6sQ6AF6BAgfEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdofcc-gV&sig=ACfU3U1FwvN6IBWVVNSqepzwrRtBs8tCrA&hl=en&sa=X&ved=2ahUKEwiC0KnukeKHAxVWMlkFHVBtAOsQ6AF6BAgyEAM
 
 [www.house.gov]
 match = 11.8%%
