--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-07 11:56:03
+lastsearch = 2024-08-07 12:15:37
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -115.0%%
 title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_socFKManr&sig=ACfU3U0MN7csrGnRwNQMaH29On28zXH0RA&hl=en&sa=X&ved=2ahUKEwj72bmAheKHAxV1HEQIHWq1BGIQ6AF6BAgaEAM
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_socFKPaiv&sig=ACfU3U354r7gxxjxWQOnn6fveRWbi80XpQ&hl=en&sa=X&ved=2ahUKEwis84SBkOKHAxWNFFkFHU0_M6wQ6AF6BAgZEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -155.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -90.0%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.vlr.gg]
 match = -145.0%%
