--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-07 09:06:03
+lastsearch = 2024-08-07 15:18:38
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -22,9 +22,9 @@ title = Thảm xốp một màu 60cm x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -5.6%%
-title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
-url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
+match = -72.2%%
+title = 60*60*10 tấm- Thảm xốp mặt nỉ hoa văn Âu Lạc
+url = http://trieuchau.com/vi-vn/1057/28071/Tham-Xop-60x60cm/606010-tam-Tham-xop-mat-ni-hoa-van-Au-Lac
 
 [shopee.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Thảm Tường Lâm
 url = https://thamtuonglam.vn/
 
 [thamachau.vn]
-match = -27.8%%
-title = Thảm xốp 1 màu vân caro 60*60*6 tấm
-url = http://thamachau.vn/tham-xop-1-mau-van-caro-60-60-6-tam520
+match = -55.6%%
+title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
+url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
 
 [thamsami.com]
 match = -94.4%%
